Bug 441566 - Imgur loading without confirmation and deletion hash
Summary: Imgur loading without confirmation and deletion hash
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: Manjaro Linux
: NOR grave
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-26 11:36 UTC by uglic
Modified: 2023-01-22 17:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Menu screenshot (86.24 KB, image/png)
2021-08-26 11:36 UTC, uglic
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uglic 2021-08-26 11:36:14 UTC
Created attachment 141060 [details]
Menu screenshot

SUMMARY

Function Share -> Imgur send a picture to the Internet without any confirmations and without possibility of deletion. And also an option to disable or somehow to configure this feature is absent.

STEPS TO REPRODUCE
1. Open any picture
2. Press "Share", then "Imgur"

OBSERVED RESULT
Image was without confirmation to external public internet resource.

EXPECTED RESULT
1. At least one confirmation window is expected, like "Do you want to publish this image without a possibility to delete?"
2. Imgur itself allows to delete loaded image by a special hash which is returned immediately on image load: https://imgur.com/delete/$delete_hash. Show user hash for deletion in addition to an URL for view.
3. Option to fully disable sending to Imgur

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ömer Fadıl USTA 2021-08-27 08:10:31 UTC
Git commit c22b558f006bf8677b0639af2b97f71a0a3dfe6f by Ömer Fadıl USTA.
Committed on 27/08/2021 at 08:06.
Pushed by usta into branch 'master'.

[Imgur Share] Added support to fetch DeleteUrl for Share

In case of User share a photo, it is his/her/its right to have
image's deleteUrl so he/she/it can able to delete uploaded Image

M  +15   -5    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/commit/c22b558f006bf8677b0639af2b97f71a0a3dfe6f
Comment 2 Ömer Fadıl USTA 2021-08-27 08:24:37 UTC
Hi Uglic , I have partially fixed your problem , I didnt add extra confirmation  dialog because if a user selects share it mean he/she/it want to share and dont want to add extra are you sure part. But you were right , he/she/it has to have right to delete uploaded image so i added support to get deleteURL.

On the other hand, share functionality is coming from  "KF purpose" not directly from gwenview thus i added missing deletehash and deleteUrl parts to purpose and it will be enabled whenever KF 5.86 released ( and whenever your distro start to use it )

So as a short explanation if anyone builds from git versions of KF and gwenview they will have this functionality but normal end users will wait until first release.
Comment 3 Nicolas Fella 2021-12-13 22:52:06 UTC
Git commit 77f636fd4bdb338f6d621bfca651db5dfa2fa952 by Nicolas Fella.
Committed on 13/12/2021 at 20:39.
Pushed by ngraham into branch 'master'.

[imgur] Show deletion url in notification

This allows users to undo the upload
Related: bug 394181

M  +4    -1    src/plugins/imgur/imgurplugin.cpp

https://invent.kde.org/frameworks/purpose/commit/77f636fd4bdb338f6d621bfca651db5dfa2fa952
Comment 4 Josesk Volpe 2023-01-22 17:49:14 UTC
(In reply to Ömer Fadıl USTA from comment #2)
>I didnt add extra
> confirmation  dialog because if a user selects share it mean he/she/it want
> to share and dont want to add extra are you sure part. 

The problem is a user could select "Share to Imgur" accidentally, with the intention to select any other thing (like "Share to device" KDE Connect option), yet all other options shows a dialog to confirm the send and fill entries to where and who would you like to send, it's only Share to Imgur that doesn't do it.
I've accidentaly uploaded a picture to Imgur once when my intention was to share to Bluetooth device, what saved me was the option to delete the picture. Still, there's other issue: ¿how can i guarantee my picture is not still stored in their servers, even after deletion? It's known that some providers backup data for a period after deletion.
I still think it should have a confirmation dialog, or maybe, instead of "Share to Imgur", there be a "Share online" option with a dialog asking wich service would you like to use.