[Imgur Share] Added support to fetch DeleteUrl for Share

In case of User share a photo, it is his/her/its right to have
image's deleteUrl so he/she/it can able to delete uploaded Image

BUG: 441566